overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,9 @@ s{
   overflow-x: hidden;
   width: 100%;
 }
+.app{
+  overflow: hidden;
+}
 
 * {
   margin: 0;
